# DiffDrive-ROS

./: .gitignore  README.md
MCU/include/: IMU.h  md25.h  motor_controller.h  motor_encoder.h
MCU/src/: IMU.cpp  main.cpp  md25.cpp  motor_controller.cpp  motor_encoder.cpp
arduino/: MD25_Motor_Bridge.ino  MD25_Motor_Bridge_ROS_Communication.ino
arduino/MD25_Motor_Bridge_ROS_Communication/: MD25_Motor_Bridge_ROS_Communication.ino
ros_ws/log/: latest_build
ros_ws/src/actions_cpp/: CMakeLists.txt  package.xml
ros_ws/src/actions_cpp/src/: target_handling_actionclient.cpp  target_handling_actionserver.cpp
ros_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
ros_ws/src/my_cpp_pkg/src/: arduino_bridge.cpp  arduino_bridge_node.cpp  arduino_motor_control.cpp  lidar_processing_node.cpp  mcu_bridge_node.cpp  odometry_node.cpp  pid_diffdrive_control.cpp
ros_ws/src/my_py_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/my_py_pkg/my_py_pkg/: diffdrive_aug_model.py  diffdrivemodel.py  keyboard_control_node.py  mpc_diffdrive_control.py  mpcc_diffdrive_control.py  track.py  track_points.csv  track_points2.csv
ros_ws/src/my_robot_bringup/: CMakeLists.txt  package.xml
ros_ws/src/my_robot_bringup/config/: gazebo_bridge.yaml  gazebobridge_extraparams.txt  my_robot.lua  my_robot_controllers.yaml
ros_ws/src/my_robot_bringup/filter/: ekf.yaml
ros_ws/src/my_robot_bringup/launch/: diffdrive_gz.launch.xml  diffdrive_odom.launch.py  diffdrive_robot.launch.xml  diffdrive_slam_launch.py  ssh_node_launcher.launch.py
ros_ws/src/my_robot_description/: package.xml
ros_ws/src/my_robot_description/launch/: display.launch.xml
ros_ws/src/my_robot_description/rviz/: urdf_config.rviz  urdf_config_.rviz  urdf_odom_config.rviz
ros_ws/src/my_robot_description/urdf/: common_properties.xacro  lidar.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  mobile_base_gz.xacro  my_robot.urdf.xacro
ros_ws/src/my_robot_description/worlds/: empty_world.sdf
ros_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/my_robot_interfaces/action/: MoveTo.action
ros_ws/src/my_robot_interfaces/msg/: CmdDriveVel.msg  MotorInfo.msg  MotorOdomInfo.msg  MotorState.msg  RobotInfo.msg
ros_ws/src/ydlidar_ros2_driver/config/: ydlidar.rviz
ros_ws/src/ydlidar_ros2_driver/launch/: ydlidar_launch.py  ydlidar_launch_view.py
ros_ws/src/ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp  ydlidar_ros2_driver_node.cpp.save
